--- a/playground/index.html
+++ b/playground/index.html
@@ -6,7 +6,7 @@
     <link rel="icon" href="/favicon.ico" />
     <title>grabcss</title>
   </head>
-  <body>
+  <body class="text-body">
     <div id="app"></div>
     <script type="module" src="/src/index.ts"></script>
   </body>
