--- a/playground/index.html
+++ b/playground/index.html
@@ -5,9 +5,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" href="/favicon.ico" />
     <title>grabcss</title>
+
+    <style>
+      html,
+      body {
+        height: 100%;
+        font-family:
+          -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+          'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+          sans-serif;
+      }
+    </style>
   </head>
   <body class="text-body">
-    <div id="app"></div>
+    <div id="app" class="h-100"></div>
     <script type="module" src="/src/index.ts"></script>
   </body>
 </html>
